--- a/AnimalFeeding.html
+++ b/AnimalFeeding.html
@@ -155,17 +155,17 @@
     <div class="col-md-6">
       <div class="card flex-md-row mb-4 box-shadow h-md-250">
         <div class="card-body d-flex flex-column align-items-start">
-          <strong class="d-inline-block mb-2 text-primary">Jaipur</strong>
+          <strong class="d-inline-block mb-2 text-primary">Ajmer</strong>
           <h3 class="mb-0">
-            <a class="text-dark">Ramesh Ranuwaliya</a>
+            <a class="text-dark">yesterday, 11 AM</a>
           </h3>
           <div class="mb-1 text-muted">11 AM</div>
-          <p class="card-text mb-auto">Mr. Ramesh has been badly injured in a car accident and he belongs to a middle class family
-              and not able to pay for his treatment, Kindly help him!.</p>
+          <p class="card-text mb-auto">We got to know about <b>Kuttu</b> yesterday, he is in very bad condition, he barely got food once or twice
+        in a week, now he is in safe hands, Kindly donate for him..</p>
           <a href="#">Donate</a>
           
         </div>
-        <img src="a1.jpg">
+        <img src="sa1.jpg">
         </div>
     </div>
     <div class="col-md-6">
@@ -173,14 +173,14 @@
         <div class="card-body d-flex flex-column align-items-start">
           <strong class="d-inline-block mb-2 text-success">gorakhpur</strong>
           <h3 class="mb-0">
-            <a class="text-dark" href="#">Rohit Khurana</a>
+            <a class="text-dark" href="#">Koala</a>
           </h3>
-          <div class="mb-1 text-muted">yesterday, 10 PM</div>
-          <p class="card-text mb-auto">A 19 year boy had a accident yesterday night and fighting for his life, he need a treatment this is 
-              a emergency case donate as much you can!</p>
+          <div class="mb-1 text-muted">2 days ago</div>
+          <p class="card-text mb-auto">He is only 4 month's old <b>Koala</b>. He had a very big accident, now he is in a hospital. Please donate for his 
+        treatment, and safe his life.</p>
           <a href="#">Donate</a>
         </div>
-        <img src="a2.jpg">
+        <img src="sa2 (koala).jpg">
       </div>
     </div>
   </div>
@@ -189,33 +189,68 @@
     <div class="col-md-6">
       <div class="card flex-md-row mb-4 box-shadow h-md-250">
         <div class="card-body d-flex flex-column align-items-start">
-          <strong class="d-inline-block mb-2 text-primary">Shimla</strong>
+          <strong class="d-inline-block mb-2 text-primary">Sultanpur</strong>
           <h3 class="mb-0">
-            <a class="text-dark" href="#">Moghi Devi</a>
+            <a class="text-dark" href="#">Rescued Monkeys</a>
           </h3>
-          <div class="mb-1 text-muted">yesterday, 1 PM</div>
-          <p class="card-text mb-auto">In a car-truck accident 5 people died and one of them is vary badly injured, Her family members died
-              in this accident, there is no one to help for her treatment.</p>
+          <div class="mb-1 text-muted">2 days ago</div>
+          <p class="card-text mb-auto">We have been rescued around 27 monkey's from a madari group which used to treat monkey's 
+              very badly so donate for their essentials and treatment..
+          </p>
           <a href="#">Donate</a>
         </div>
-        <img src="a3.jpg">
+        <img src="sa3.jpg">
          </div>
     </div>
     <div class="col-md-6">
       <div class="card flex-md-row mb-4 box-shadow h-md-250">
         <div class="card-body d-flex flex-column align-items-start">
-          <strong class="d-inline-block mb-2 text-success">nalagarh</strong>
+          <strong class="d-inline-block mb-2 text-success">Rajkot</strong>
           <h3 class="mb-0">
-            <a class="text-dark" href="#">Pappu Hans</a>
+            <a class="text-dark" href="#">Rockey</a>
           </h3>
-          <div class="mb-1 text-muted">2 Days Ago</div>
-          <p class="card-text mb-auto">He is badly injured his 5 bones are breaked, some people ran away after beating him badly, they beat him with bats, roads and 
-              hard sticks, Kindly donate for his treatment
+          <div class="mb-1 text-muted">4 Days Ago</div>
+          <p class="card-text mb-auto">Rocky the German Shepherd who had to be put to sleep after being left to suffer
+               a skin condition and arthritis. He needs treatment so please help him..
           </p>
           <a href="#">Donate</a>
         </div>
-        <img src="a4.jpg">
+        <img src="sa4.jpg">
         </div>
+    </div>
+  </div>
+  <div class="row mb-2">
+    <div class="col-md-6">
+      <div class="card flex-md-row mb-4 box-shadow h-md-250">
+        <div class="card-body d-flex flex-column align-items-start">
+          <strong class="d-inline-block mb-2 text-primary">Nuh</strong>
+          <h3 class="mb-0">
+            <a class="text-dark">Cattle</a>
+          </h3>
+          <div class="mb-1 text-muted">5 days ago</div>
+          <p class="card-text mb-auto">  We rescued 31 cattle which were being illegally transported in a container truck in Nuh district of the state,
+         in which 12 cows, 10 bulls and nine calves were there, please donate for their survival..</p>
+          <a href="#">Donate</a>
+          
+        </div>
+        <img src="sa5.jpg">
+        </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card flex-md-row mb-4 box-shadow h-md-250">
+        <div class="card-body d-flex flex-column align-items-start">
+          <strong class="d-inline-block mb-2 text-success">Samastipur</strong>
+          <h3 class="mb-0">
+            <a class="text-dark" href="#">Badal</a>
+          </h3>
+          <div class="mb-1 text-muted">3 days ago</div>
+          <p class="card-text mb-auto">Badal was eating grass on thursday at kalra colony and somebody fired on his leg by a pistol
+              he is in a very bad condition, donate for his sergery..
+          </p>
+          <a href="#">Donate</a>
+        </div>
+        <img src="sa6.jpg">
+      </div>
     </div>
   </div>
 
