--- a/openGroupMarriage.html
+++ b/openGroupMarriage.html
@@ -155,32 +155,34 @@
     <div class="col-md-6">
       <div class="card flex-md-row mb-4 box-shadow h-md-250">
         <div class="card-body d-flex flex-column align-items-start">
-          <strong class="d-inline-block mb-2 text-primary">Jaipur</strong>
+          <strong class="d-inline-block mb-2 text-primary">Patna</strong>
           <h3 class="mb-0">
-            <a class="text-dark">Ramesh Ranuwaliya</a>
+            <a class="text-dark">Jio Bihar</a>
           </h3>
-          <div class="mb-1 text-muted">11 AM</div>
-          <p class="card-text mb-auto">Mr. Ramesh has been badly injured in a car accident and he belongs to a middle class family
-              and not able to pay for his treatment, Kindly help him!.</p>
+          <div class="mb-1 text-muted">Today, 11 AM</div>
+          <p class="card-text mb-auto"><b>Jio Bihar Foundation,</b> Patna is working on group marriage project of poor people 
+            who can't afford marriage. Next program is plnned in the first week of upcoming month, contribute in this amazing project..
+         </p>
           <a href="#">Donate</a>
           
         </div>
-        <img src="a1.jpg">
+        <img src="gm5.jpg">
         </div>
     </div>
     <div class="col-md-6">
       <div class="card flex-md-row mb-4 box-shadow h-md-250">
         <div class="card-body d-flex flex-column align-items-start">
-          <strong class="d-inline-block mb-2 text-success">gorakhpur</strong>
+          <strong class="d-inline-block mb-2 text-success">Sirsa</strong>
           <h3 class="mb-0">
-            <a class="text-dark" href="#">Rohit Khurana</a>
+            <a class="text-dark" href="#">Bandhan</a>
           </h3>
-          <div class="mb-1 text-muted">yesterday, 10 PM</div>
-          <p class="card-text mb-auto">A 19 year boy had a accident yesterday night and fighting for his life, he need a treatment this is 
-              a emergency case donate as much you can!</p>
+          <div class="mb-1 text-muted">Yesterday</div>
+          <p class="card-text mb-auto">Banshan is an organization which arrange group marriages for orphan people. They are working from 
+            They are working from past 14 years. Donate for the their upcoming Group Marriage arrangements.
+          </p>
           <a href="#">Donate</a>
         </div>
-        <img src="a2.jpg">
+        <img src="gm1.jpg">
       </div>
     </div>
   </div>
@@ -189,33 +191,68 @@
     <div class="col-md-6">
       <div class="card flex-md-row mb-4 box-shadow h-md-250">
         <div class="card-body d-flex flex-column align-items-start">
-          <strong class="d-inline-block mb-2 text-primary">Shimla</strong>
+          <strong class="d-inline-block mb-2 text-primary">Bignor</strong>
           <h3 class="mb-0">
-            <a class="text-dark" href="#">Moghi Devi</a>
+            <a class="text-dark" href="#">Pavitra Rishta</a>
           </h3>
-          <div class="mb-1 text-muted">yesterday, 1 PM</div>
-          <p class="card-text mb-auto">In a car-truck accident 5 people died and one of them is vary badly injured, Her family members died
-              in this accident, there is no one to help for her treatment.</p>
+          <div class="mb-1 text-muted">2 days ago</div>
+          <p class="card-text mb-auto">Pavitra Rishta is a open organization, which arrange Group Marriages for every religion, They arrange these programs
+            almost every month so please help them for keep this brilliant work up..
+          </p>
           <a href="#">Donate</a>
         </div>
-        <img src="a3.jpg">
+        <img src="gm2.jpg">
          </div>
     </div>
     <div class="col-md-6">
       <div class="card flex-md-row mb-4 box-shadow h-md-250">
         <div class="card-body d-flex flex-column align-items-start">
-          <strong class="d-inline-block mb-2 text-success">nalagarh</strong>
+          <strong class="d-inline-block mb-2 text-success">Shiliguri</strong>
           <h3 class="mb-0">
-            <a class="text-dark" href="#">Pappu Hans</a>
+            <a class="text-dark" href="#">Shubho Vibah</a>
           </h3>
-          <div class="mb-1 text-muted">2 Days Ago</div>
-          <p class="card-text mb-auto">He is badly injured his 5 bones are breaked, some people ran away after beating him badly, they beat him with bats, roads and 
-              hard sticks, Kindly donate for his treatment
+          <div class="mb-1 text-muted">4 Days Ago</div>
+          <p class="card-text mb-auto">Shubho Vibah is continuously organising successful Group Marriages since past 2 years.
+            They are really doing great work and helping people for building strong, happy and successful relationship, help and encorage them with your contribution.
           </p>
           <a href="#">Donate</a>
         </div>
-        <img src="a4.jpg">
+        <img src="gm4.jpg">
         </div>
+    </div>
+  </div>
+  <div class="row mb-2">
+    <div class="col-md-6">
+      <div class="card flex-md-row mb-4 box-shadow h-md-250">
+        <div class="card-body d-flex flex-column align-items-start">
+          <strong class="d-inline-block mb-2 text-primary">Bangalore</strong>
+          <h3 class="mb-0">
+            <a class="text-dark">Bosco</a>
+          </h3>
+          <div class="mb-1 text-muted">5 days ago</div>
+          <p class="card-text mb-auto"> Bosco organization organises indivisual as well as group marriages for christian community and helping couples to start with a
+            new happy married life, contribute in this great work..   </p>
+          <a href="#">Donate</a>
+          
+        </div>
+        <img src="gm3.png">
+        </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card flex-md-row mb-4 box-shadow h-md-250">
+        <div class="card-body d-flex flex-column align-items-start">
+          <strong class="d-inline-block mb-2 text-success"r>Nagpur</strong>
+          <h3 class="mb-0">
+            <a class="text-dark" href="#">Ishar-e-Nikah</a>
+          </h3>
+          <div class="mb-1 text-muted">3 days ago</div>
+          <p class="card-text mb-auto">Ishar-e-Nikah is a very big foundation which takes online registrations of couples and organises group marriage after every 4 or greater registration, 
+            you can contribute in this great social work..
+          </p>
+          <a href="#">Donate</a>
+        </div>
+        <img src="gm6.jpeg">
+      </div>
     </div>
   </div>
 
