--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                     <form><input type="button" value="view" onclick="openClothsDonation()"></form>
 
                   </div>
-                  <small class="text-muted">social helps</small>
+                  <small class="text-muted">social works</small>
                 </div>
               </div>
             </div>
