--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/b.jpg" class="d-block w-100" alt="...">
+            <img src="../images/b.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Donate Food</h5>
               <p>It's not easy to survive without food, Please help them.</p>
