--- a/assets/BlindDonation.html
+++ b/assets/BlindDonation.html
@@ -163,7 +163,7 @@
           <p class="card-text mb-auto">They don't have eyes but they can feel everyhing they can do everything to explore their potential and help them, connect with us, let's work together for them...</p>
           <a href="#">Donate</a>
         </div>
-            <img src="../images/g1.jpg">
+            <img src="../Images/g1.jpg">
         </div>
     </div>
     <div class="col-md-6">
@@ -177,7 +177,7 @@
           <p class="card-text mb-auto">They don't have eyes but they can feel everyhing they can do everything to explore their potential and help them, connect with us, lwt's work together...</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/g2.jpg">
+        <img src="../Images/g2.jpg">
         </div>
     </div>
   </div>
@@ -194,7 +194,7 @@
               <p class="card-text mb-auto">They don't have eyes but they can feel everyhing they can do everything to explore their potential and help them, connect with us, lwt's work together...</p>
               <a href="#">Donate</a>
             </div>
-            <img src="../images/g3.jpg">
+            <img src="../Images/g3.jpg">
              </div>
         </div>
         <div class="col-md-6">
@@ -208,7 +208,7 @@
               <p class="card-text mb-auto">They don't have eyes but they can feel everyhing they can do everything to explore their potential and help them, connect with us, lwt's work together...</p>
               <a href="#">Donate</a>
             </div>
-            <img src="../images/g4.jpg">
+            <img src="../Images/g4.jpg">
               </div>
         </div>
       </div>
