--- a/assets/ClothsDonation.html
+++ b/assets/ClothsDonation.html
@@ -165,7 +165,7 @@
         <p class="card-text mb-auto">This is a very import part of our lives just think about those who are living without cloths and shoes, Check the details and donate...</p>
         <a href="#">Donate</a>
       </div>
-      <img src="../images/i1.jpg">
+      <img src="../Images/i1.jpg">
        </div>
   </div>
   <div class="col-md-6">
@@ -179,7 +179,7 @@
         <p class="card-text mb-auto">This is a very import part of our lives just think about those who are living without cloths and shoes, Check the details and donate...</p>
         <a href="#">Donate</a>
       </div>
-      <img src="../images/i2.jpg">
+      <img src="../Images/i2.jpg">
      </div>
   </div>
 </div>
@@ -195,7 +195,7 @@
         <p class="card-text mb-auto">This is a very import part of our lives just think about those who are living without cloths and shoes, Check the details and donate...</p>
         <a href="#">Donate</a>
       </div>
-      <img src="../images/i3.jpg">
+      <img src="../Images/i3.jpg">
        </div>
   </div>
   <div class="col-md-6">
@@ -209,7 +209,7 @@
         <p class="card-text mb-auto">This is a very import part of our lives just think about those who are living without cloths and shoes, Check the details and donate...</p>
         <a href="#">Donate</a>
       </div>
-      <img src="../images/i4.jpg">
+      <img src="../Images/i4.jpg">
       </div>
   </div>
 </div>
