--- a/assets/DisabledDonation.html
+++ b/assets/DisabledDonation.html
@@ -164,7 +164,7 @@
           <p class="card-text mb-auto">Donate for them they also have a life and right to live and enjoy their lives instead of being sad always, let's put a smile on their lovely faces, connect to know more..</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/f1.jpg">
+        <img src="../Images/f1.jpg">
          </div>
     </div>
     <div class="col-md-6">
@@ -178,7 +178,7 @@
           <p class="card-text mb-auto">Donate for them they also have a life and right to live and enjoy their lives instead of being sad always, let's put a smile on their lovely faces, connect to know more..</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/f2.jpg">
+        <img src="../Images/f2.jpg">
         </div>
     </div>
   </div>
@@ -195,7 +195,7 @@
           <p class="card-text mb-auto">Donate for them they also have a life and right to live and enjoy their lives instead of being sad always, let's put a smile on their lovely faces, connect to know more..</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/f3.jpg">
+        <img src="../Images/f3.jpg">
         </div>
     </div>
     <div class="col-md-6">
@@ -209,7 +209,7 @@
           <p class="card-text mb-auto">Donate for them they also have a life and right to live and enjoy their lives instead of being sad always, let's put a smile on their lovely faces, connect to know more..</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/f4.jpg">
+        <img src="../Images/f4.jpg">
         </div>
     </div>
   </div>
