--- a/assets/OrganDonation.html
+++ b/assets/OrganDonation.html
@@ -163,7 +163,7 @@
           <p class="card-text mb-auto">Donate Your organ's after Death, they will be of no use for you but can save 1-4 lives, So sign the agreement and forget...</p>
           <a href="#">View deatils</a>
         </div>
-            <img src="../images/h1.jpg">
+            <img src="../Images/h1.jpg">
         </div>
     </div>
     <div class="col-md-6">
@@ -177,7 +177,7 @@
           <p class="card-text mb-auto">Donate Your organ's after Death, they will be of no use for you but can save 1-4 lives, So sign the agreement and forget...</p>
           <a href="#">View deatils</a>
         </div>
-        <img src="../images/h2.jpg">
+        <img src="../Images/h2.jpg">
        </div>
     </div>
   </div>
@@ -194,7 +194,7 @@
           <p class="card-text mb-auto">Donate Your organ's after Death, they will be of no use for you but can save 1-4 lives, So sign the agreement and forget...</p>
           <a href="#">View deatils</a>
         </div>
-        <img src="../images/h3.jpg">
+        <img src="../Images/h3.jpg">
          </div>
     </div>
     <div class="col-md-6">
@@ -207,7 +207,7 @@
           <p class="card-text mb-auto">Donate Your organ's after Death, they will be of no use for you but can save 1-4 lives, So sign the agreement and forget...</p>
           <a href="#">View deatils</a>
         </div>
-        <img src="../images/h4.jpg">
+        <img src="../Images/h4.jpg">
         </div>
     </div>
   </div>
