--- a/assets/RainBasera.html
+++ b/assets/RainBasera.html
@@ -166,7 +166,7 @@
           <a href="#">Donate</a>
           
         </div>
-        <img src="../images/rb1.jpg">
+        <img src="../Images/rb1.jpg">
         </div>
     </div>
     <div class="col-md-6">
@@ -181,7 +181,7 @@
             to make this project successful.</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/rb2.jpg">
+        <img src="../Images/rb2.jpg">
       </div>
     </div>
   </div>
@@ -200,7 +200,7 @@
           </p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/rb3.jpg">
+        <img src="../Images/rb3.jpg">
          </div>
     </div>
     <div class="col-md-6">
@@ -215,7 +215,7 @@
           </p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/rb4.jpg">
+        <img src="../Images/rb4.jpg">
         </div>
     </div>
   </div>
@@ -234,7 +234,7 @@
           <a href="#">Donate</a>
           
         </div>
-        <img src="../images/rb6.jpg">
+        <img src="../Images/rb6.jpg">
         </div>
     </div>
     <div class="col-md-6">
@@ -250,7 +250,7 @@
           </p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/rb5.jpg">
+        <img src="../Images/rb5.jpg">
       </div>
     </div>
   </div>
