--- a/assets/about.html
+++ b/assets/about.html
@@ -79,7 +79,7 @@
                          areas like education,treatment and organ donations etc.</p>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid" src="../images/y.jpg">
+                <img class="img-fluid" src="../Images/y.jpg">
             </div>
         </div>
 
@@ -102,7 +102,7 @@
                 </p>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid" src="../images/x.jpg">
+                <img class="img-fluid" src="../Images/x.jpg">
             </div>
         </div>
 
@@ -120,7 +120,7 @@
                 </p>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid" src="../images/W.png">
+                <img class="img-fluid" src="../Images/W.png">
             </div>
         </div>
 
