--- a/assets/bloodDonation.html
+++ b/assets/bloodDonation.html
@@ -163,7 +163,7 @@
           <p class="card-text mb-auto">This is to inform that new blood donation camp's are going to held through different faithful organizations intrested donors can check the details.</p>
           <a href="#">register</a>
         </div>
-       <img src="../images/c1.jpg">
+       <img src="../Images/c1.jpg">
       </div>
     </div>
     <div class="col-md-6">
@@ -177,7 +177,7 @@
           <p class="card-text mb-auto">This is to inform that new blood donation camp's are going to held through different faithful organizations intrested donors can check the details.</p>
           <a href="#">register</a>
         </div>
-        <img src="../images/c2.jpg">
+        <img src="../Images/c2.jpg">
         </div>
     </div>
   </div>
@@ -194,7 +194,7 @@
           <p class="card-text mb-auto">This is to inform that new blood donation camp's are going to held through different faithful organizations intrested donors can check the details.</p>
           <a href="#">register</a>
         </div>
-        <img src="../images/c3.jpg">
+        <img src="../Images/c3.jpg">
          </div>
     </div>
     <div class="col-md-6">
@@ -208,7 +208,7 @@
           <p class="card-text mb-auto">This is to inform that new blood donation camp's are going to held through different faithful organizations intrested donors can check the details.</p>
           <a href="#">register</a>
         </div>
-        <img src="../images/c4.jpg">
+        <img src="../Images/c4.jpg">
         </div>
     </div>
   </div>
