--- a/assets/educationDonation.html
+++ b/assets/educationDonation.html
@@ -192,7 +192,7 @@
             Now you can save their furure. Check details Now!</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/e1.jpg">
+        <img src="../Images/e1.jpg">
         </div>
     </div>
     <div class="col-md-6">
@@ -207,7 +207,7 @@
             Now you can save their furure. Check details Now!</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/e2.jpg">
+        <img src="../Images/e2.jpg">
         </div>
     </div>
   </div>
@@ -225,7 +225,7 @@
             Now you can save their furure. Check details Now!</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/e3.jpg">
+        <img src="../Images/e3.jpg">
          </div>
     </div>
     <div class="col-md-6">
@@ -241,7 +241,7 @@
           </p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/e4.jpg">
+        <img src="../Images/e4.jpg">
         </div>
     </div>
   </div>
