--- a/assets/food.html
+++ b/assets/food.html
@@ -164,7 +164,7 @@
           <p class="card-text mb-auto">Donate and help them to survive Donate for their meals, kindly check the project details</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/b1.jpg">
+        <img src="../Images/b1.jpg">
         </div>
     </div>
     <div class="col-md-6">
@@ -178,7 +178,7 @@
           <p class="card-text mb-auto">Donate and help them to survive Donate for their meals, kindly check the project details.</p>
           <a href="#">donate</a>
         </div>
-        <img src="../images/b2.jpg">
+        <img src="../Images/b2.jpg">
          </div>
     </div>
   </div>
@@ -195,7 +195,7 @@
           <p class="card-text mb-auto">Donate and help them to survive Donate for their meals, kindly check the project details.</p>
           <a href="#">donate</a>
         </div>
-        <img src="../images/b3.jpg">
+        <img src="../Images/b3.jpg">
         </div>
     </div>
     <div class="col-md-6">
@@ -209,7 +209,7 @@
           <p class="card-text mb-auto">Donate and help them to survive Donate for their meals, kindly check the project details.</p>
           <a href="#">donate</a>
         </div>
-        <img src="../images/b4.jpeg">
+        <img src="../Images/b4.jpeg">
         </div>
     </div>
   </div>
