--- a/assets/openGroupMarriage.html
+++ b/assets/openGroupMarriage.html
@@ -166,7 +166,7 @@
           <a href="#">Donate</a>
           
         </div>
-        <img src="../images/gm5.jpg">
+        <img src="../Images/gm5.jpg">
         </div>
     </div>
     <div class="col-md-6">
@@ -182,7 +182,7 @@
           </p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/gm1.jpg">
+        <img src="../Images/gm1.jpg">
       </div>
     </div>
   </div>
@@ -201,7 +201,7 @@
           </p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/gm2.jpg">
+        <img src="../Images/gm2.jpg">
          </div>
     </div>
     <div class="col-md-6">
@@ -217,7 +217,7 @@
           </p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/gm4.jpg">
+        <img src="../Images/gm4.jpg">
         </div>
     </div>
   </div>
@@ -235,7 +235,7 @@
           <a href="#">Donate</a>
           
         </div>
-        <img src="../images/gm3.png">
+        <img src="../Images/gm3.png">
         </div>
     </div>
     <div class="col-md-6">
@@ -251,7 +251,7 @@
           </p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/gm6.jpeg">
+        <img src="../Images/gm6.jpeg">
       </div>
     </div>
   </div>
