--- a/index.html
+++ b/index.html
@@ -220,28 +220,28 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./images/a.jpg" class="d-block w-100" alt="...">
+            <img src="./Images/a.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Donate Organs after Death</h5>
               <p>It can save many Lives, show Humanity and Donate Organ's after Death</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/b.jpg" class="d-block w-100" alt="...">
+            <img src="./Images/b.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Donate Food</h5>
               <p>It's not easy to survive without food, Please help them.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/c.jpg" class="d-block w-100" alt="...">
+            <img src="./Images/c.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Donate cloathes</h5>
               <p>Donate cloathes and help them to survive</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img  src="./images/d.jpg" class="d-block w-100" alt="...">
+            <img  src="./Images/d.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Donate Blood</h5>
               <p>It can save someone's Life!</p>
@@ -296,7 +296,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img src="./images/f.jpg">
+              <img src="./Images/f.jpg">
               <div class="card-body">
                 <h5>Accident Victim's Treatment</h5>
                 <p class="card-text">Donate for the accident victims who don't have enough money for their treatment and currently fighting for their life.</p>
@@ -314,7 +314,7 @@
 
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img src="./images/g.jpeg">
+              <img src="./Images/g.jpeg">
               <div class="card-body">
                 <h5>Donate Food</h5>
                 <p class="card-text">Donate food for people who don't even have food to servive and are not heaving any help from NGO's or other organization.</p>
@@ -330,7 +330,7 @@
 
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img src="./images/h.jpg">              <div class="card-body">
+              <img src="./Images/h.jpg">              <div class="card-body">
                <h5>Old age Homes</h5>
                 <p class="card-text">Donate for those helpless and sick parents who showed this world to their children, & in return they showed them this hell.</p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -348,7 +348,7 @@
             <div class="row">
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img src="./images/i.jpg">              <div class="card-body">
+              <img src="./Images/i.jpg">              <div class="card-body">
                 <h5>Donate for education</h5>
                 <p class="card-text">Donate for those enocent students who have to leave study due to lack of resources or money.</p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -364,7 +364,7 @@
 
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img src="./images/j.jpg">              <div class="card-body">
+              <img src="./Images/j.jpg">              <div class="card-body">
                 <h5>Blood Donation</h5>
                 <p class="card-text">Donate blood to save someone's Life, check the urgent requirements and blood banks .</p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -379,7 +379,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img src="./images/k.jpg">              <div class="card-body">
+              <img src="./Images/k.jpg">              <div class="card-body">
                 <h5>Donate for Disables</h5>
                 <p class="card-text">Donate for people who are disable and needy, donate for their treatment, education and survival.</p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -400,7 +400,7 @@
             <div class="row">
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img src="./images/l.jpg">              <div class="card-body">
+              <img src="./Images/l.jpg">              <div class="card-body">
                 <h5>Donate for Blind's</h5>
                 <p class="card-text">Donate to the organizations and foundations, who are working on the growth and education of blind's.</p>
                  <div class="d-flex justify-content-between align-items-center">
@@ -415,7 +415,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img src="./images/m.jpg">              <div class="card-body">
+              <img src="./Images/m.jpg">              <div class="card-body">
                 <h5>Donate organ's after Death</h5>
                 <p class="card-text">Donate your organ's after death, as they will be useless for you but will provide a new life to someone.</p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -430,7 +430,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img src="./images/n.jpg">              <div class="card-body">
+              <img src="./Images/n.jpg">              <div class="card-body">
                 <h5>Cloth and shoe Donation</h5>
                 <p class="card-text">Donate for or Donate clothes, as many people in India are living without these basic needs and suffering a lot.</p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -452,7 +452,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img src="./images/1.jpg">
+              <img src="./Images/1.jpg">
               <div class="card-body">
                 <h5>Treatment of Sick Stray Animals</h5>
                 <p class="card-text">Donate for helpless, sick and injured stray Animals. If you can't adopt them, then 
@@ -475,7 +475,7 @@
 
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img src="./images/2.jpg">
+              <img src="./Images/2.jpg">
               <div class="card-body">
                 <h5>Group Marriage of Poor's</h5>
                 <p class="card-text">Donate for Group Marriage (<b>#Samuhik Vivah</b>) and bless these couples with your little contribution in their new life..</p>
@@ -492,7 +492,7 @@
 
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img src="./images/3.jpg">              <div class="card-body">
+              <img src="./Images/3.jpg">              <div class="card-body">
                <h5>For Building Rain Shelter's</h5>
                 <p class="card-text">We have been collaberated with some social service based 
                   organizations who are making Rain Basera for poor's. please help them in making more <b>Rain Basera's</b></p>
