--- a/assets/OldAgeDonation.html
+++ b/assets/OldAgeDonation.html
@@ -192,7 +192,7 @@
           <p class="card-text mb-auto">Consider them as your parents or grand parents and help them to live their lives, for more information kindly check the details</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/d1.jpg">
+        <img src="../Images/d1.jpg">
          </div>
     </div>
     <div class="col-md-6">
@@ -205,7 +205,7 @@
           <p class="card-text mb-auto">Consider them as your parents or grand parents and help them to live their lives, for more information kindly check the details</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/d2.jpg">
+        <img src="../Images/d2.jpg">
          </div>
     </div>
   </div>
@@ -222,7 +222,7 @@
           <p class="card-text mb-auto">Consider them as your parents or grand parents and help them to live their lives, for more information kindly check the details</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/d3.jpg">
+        <img src="../Images/d3.jpg">
         </div>
     </div>
     <div class="col-md-6">
@@ -236,7 +236,7 @@
           <p class="card-text mb-auto">Consider them as your parents or grand parents and help them to live their lives, for more information kindly check the details</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/d4.jpg">
+        <img src="../Images/d4.jpg">
         </div>
     </div>
   </div>
