--- a/assets/victimTreatment.html
+++ b/assets/victimTreatment.html
@@ -165,7 +165,7 @@
           <a href="#">Donate</a>
           
         </div>
-        <img src="../images/a1.jpg">
+        <img src="../Images/a1.jpg">
         </div>
     </div>
     <div class="col-md-6">
@@ -180,7 +180,7 @@
               a emergency case donate as much you can!</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/a2.jpg">
+        <img src="../Images/a2.jpg">
       </div>
     </div>
   </div>
@@ -198,7 +198,7 @@
               in this accident, there is no one to help for her treatment.</p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/a3.jpg">
+        <img src="../Images/a3.jpg">
          </div>
     </div>
     <div class="col-md-6">
@@ -214,7 +214,7 @@
           </p>
           <a href="#">Donate</a>
         </div>
-        <img src="../images/a4.jpg">
+        <img src="../Images/a4.jpg">
         </div>
     </div>
   </div>
