--- a/assets/about.html
+++ b/assets/about.html
@@ -120,10 +120,9 @@
                 </p>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid" src="../Images/W.png">
+             <a href="https://donationpayments.s3.ap-south-1.amazonaws.com/payment.html">   <img class="img-fluid" src="../Images/W.png"></a>
             </div>
         </div>
-
     </div>
 
 
